[gd_scene load_steps=3 format=3 uid="uid://pjf8pn7ogmyy"]

[ext_resource type="Script" path="res://canvas_layer.gd" id="1_gwh2a"]
[ext_resource type="Texture2D" uid="uid://lt2cgu4jqe8c" path="res://icon.svg" id="1_hx8q2"]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_gwh2a")

[node name="Timer" type="Timer" parent="CanvasLayer"]
process_callback = 0
autostart = true

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 967.0
offset_top = 273.0
offset_right = 1081.0
offset_bottom = 322.0
text = "+1 Dollar"

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 968.0
offset_top = 359.0
offset_right = 1082.0
offset_bottom = 413.0
text = "+1 Wood
-2 Dollar"

[node name="FactorGridContainer" type="GridContainer" parent="CanvasLayer"]
offset_left = 45.0
offset_top = 34.0
offset_right = 815.0
offset_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="SupplyPanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_left = 961.0
offset_top = 35.0
offset_right = 1112.0
offset_bottom = 203.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/SupplyPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/SupplyPanelContainer/MarginContainer"]
layout_mode = 2

[node name="Icon" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1027, 542)
texture = ExtResource("1_hx8q2")

[connection signal="timeout" from="CanvasLayer/Timer" to="CanvasLayer" method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="CanvasLayer" method="_on_button_2_pressed"]
